--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -9,3 +9,4 @@ deployment:
     - /bin/cp -R temp $DEPLOYPATH
     - /bin/cp .htaccess $DEPLOYPATH
     - /bin/cp index.php $DEPLOYPATH
+     - /index.php $DEPLOYPATH
